ecmascript/parser/tests/test262-error-references/fail/b7ae8c17f892abf6.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/b7ae8c17f892abf6.js:3:1
  |
3 | ]
  | ^

